2006-03-21  Robert Schuster  <robertschuster@fsfe.org>

        * javax/swing/text/DefaultCaret.java: Added class variable denoting
        the textcomponent having a selection.
        (clearSelection): Clear 'componentWithSelection' variable.
        (handleSelection): Clear selection of current component having a
        selection before setting a new selection in another component.
	(mouseDragged): Only react on left mouse button.
	(mouseClicked): Only react on left mouse button.

2006-03-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/metal/MetalTabbedPaneUI.java
	(paintContentBorderTopEdge): Implemented.
	(paintContentBorderBottomEdge): Implemented.
	(paintContentBorderLeftEdge): Implemented.
	(paintContentBorderRightEdge): Implemented.
	(isLastTabInRun): New helper method.

2006-03-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JTabbedPane.java
	(Page.getForeground): Fall back to returning the tabbed pane's
	foreground if no foreground has been exclicitly set.

2006-03-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/metal/MetalComboBoxButton.java
	(setEnabled): Update colors of button correctly.
	* javax/swing/plaf/metal/MetalComboBoxUI.java
	(MetalPropertyChangeListener.propertyChange): Update the colors
	of the list and the button when any of the color properties
	of the ComboBox change.

2006-03-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicButtonUI.java
	(uninstallDefaults): Only nullify button colors if they are
	not UIResource instances.

2006-03-21  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JComponent.java
	(AccessibleJComponent.getAccessibleDescription): Call super,
	* javax/swing/JToolTip.java: API doc updates all over, plus
	(AccessibleJToolTip.getAccessibleDescription): Implemented,
	(AccessibleJToolTip.getAccessibleRole): Implemented,
	(getAccessibleContext): Implemented,
	(paramString): Reimplemented,
	(setComponent): Fire PropertyChangeEvent,
	(setTipText): Likewise.
